# kvadrat-online

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: presubmit.yml
.openai/: hosting.json
app/: KvadratGame.tsx  game-engine.ts  globals.css  layout.tsx  page.tsx  strategy-wasm.ts
public/data/: DAWG_MANIFEST.json  csw21-bags.txt  csw24-bags.txt  nwl23-bags.txt
public/data/models/: MANIFEST.json  fragment-context-v4.kfm  fragment-full-v4.kfm
public/wasm/: MANIFEST.json  kvadrat-strategy.wasm
scripts/: analyze-self-play.ts  build-wasm.mjs  extract-dawg.mjs  generate-self-play.ts  generate-word-bags.mjs  run-native-self-play.mjs
tests/: game-engine.test.ts  rendered-html.test.mjs
wasm-strategy/: Cargo.toml  README.md
wasm-strategy/src/: fragment_model.rs  lib.rs  root_ranker.rs
wasm-strategy/tests/: native_engine.rs
