[package]
name = "kvadrat-strategy"
version = "0.1.0"
edition = "2024"
publish = false

[features]
fragment-training = ["dep:candle-core", "dep:candle-nn", "dep:memmap2"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
## Candle is optional so browser and self-play builds do not compile the trainer.
candle-core = { version = "0.11", features = ["metal"], optional = true }
candle-nn = { version = "0.11", features = ["metal"], optional = true }
ctrlc = "3.4"
flate2 = "1.1"
memmap2 = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "kvadrat-fragment-train"
path = "src/bin/kvadrat-fragment-train.rs"
required-features = ["fragment-training"]

[[bin]]
name = "kvadrat-fragment-export"
path = "src/bin/kvadrat-fragment-export.rs"
required-features = ["fragment-training"]

[[bin]]
name = "kvadrat-counterfactual-train"
path = "src/bin/kvadrat-counterfactual-train.rs"
required-features = ["fragment-training"]

[[bin]]
name = "kvadrat-rank-export"
path = "src/bin/kvadrat-rank-export.rs"
required-features = ["fragment-training"]
